...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Profile Picture (in front) -->
    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="133dp"
        android:layout_height="133dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/circle_shape"
        android:contentDescription="Profile Picture"
...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="331dp"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastname_input" />

    <TextView
        android:layout_width="343dp"
        android:layout_height="16dp"
        android:layout_marginBottom="4dp"
        android:alpha="0.7"
        android:fontFamily="sans-serif-medium"
        android:text="First Name:"
        android:textColor="@color/trojanRed"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/firstname_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="343dp"
...
        android:alpha="0.7"
        android:fontFamily="sans-serif-medium"
        android:text="Phone Number:"
        android:textColor="@color/trojanRed"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/phone_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/firstname_input"
...
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname_input" />


    <Button
        android:id="@+id/cancel_button"
        android:layout_width="153dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="168dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/red_primary"
...
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_input"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="160dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_button"
        android:elevation="4dp"
...
