<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/tickets"
        android:title="@string/title_events" />

    <item
        android:id="@+id/qrActivity"
        android:icon="@drawable/qr_code_bottom_bar"
        android:title="@string/title_qr" />

    <item
        android:id="@+id/profileActivity"
        android:icon="@drawable/profile_bottom_bar"
        android:title="@string/title_profile" />

</menu>