<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/empty_events_parent"
    android:padding="24dp">

    <!-- Message Section -->
    <ProgressBar
        android:id="@+id/loadingIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="508dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="WELCOME TO TROJAN PLANNER"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventIcon" />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="No events found."
        android:textColor="@color/darkGray"
        android:textSize="20dp"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <TextView
        android:id="@+id/instructionTextView"
        android:layout_width="372dp"
        android:layout_height="49dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="SCAN EVENT QR CODES TO VIEW/JOIN THEM!"
        android:textColor="@color/red_primary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alertIcon" />

    <Button
        android:id="@+id/becomeOrganizerButton"
        android:layout_width="240dp"
        android:layout_height="73dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/red_primary"
        android:elevation="8in"
        android:fontFamily="sans-serif-medium"
        android:padding="12dp"
        android:text="Become an Organizer"
        android:textColor="@android:color/white"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/createEventButton"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageTextView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/createEventButton"
        android:layout_width="167dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/black"
        android:elevation="4dp"
        android:fontFamily="sans-serif-medium"
        android:padding="12dp"
        android:text="CREATE AN EVENT"
        android:textColor="@android:color/white"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/becomeOrganizerButton"
        app:layout_constraintTop_toBottomOf="@+id/messageTextView"
        app:layout_constraintVertical_bias="0.013" />

    <ImageView
        android:id="@+id/alertIcon"
        android:layout_width="34dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:contentDescription="Alert icon"
        android:src="@drawable/alert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/eventIcon"
        android:layout_width="378dp"
        android:layout_height="203dp"
        android:layout_marginTop="8dp"
        android:contentDescription="An Icon for events"
        android:src="@drawable/logo3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructionTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>
